Fix navbar hamburger going out of bounds when active

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -21,9 +21,12 @@
   height: 100%;
 }
 
+.ham-container,
 .ham {
   display: none;
   height: var(--navbar-height);
+}
+.ham {
   cursor: pointer;
   -webkit-tap-highlight-color: transparent;
   transition: transform 400ms;
@@ -106,6 +109,7 @@
     top: 0;
   }
 
+  .ham-container,
   .ham {
     display: block;
   }
